--- a/src/template.yaml
+++ b/src/template.yaml
@@ -19,13 +19,13 @@ Globals:
     Timeout: 1
 Parameters:
   IAMUsername:
-    Description: felix
+    Description: Name of the IAM user who will be the administrator of the KMS key
+      we create. This user will be able to encrypt values and manage the key.
     Type: String
 Resources:
   ParameterStoreWeatherDevEncryptionKey:
     Properties:
-      Description: Encryption key for secret config values for the Parameter Store
-          Weather
+      Description: Encryption key for secret config values for the Parameter Store Weather
       EnableKeyRotation: false
       Enabled: true
       KeyPolicy:
@@ -60,9 +60,9 @@ Resources:
           Effect: Allow
           Principal:
               AWS:
-              Fn::GetAtt:
-              - ParameterStoreWeatherFunctionRoleDev
-              - Arn
+                Fn::GetAtt:
+                - ParameterStoreWeatherFunctionRoleDev
+                - Arn
           Resource: '*'
           Sid: Allow use of the key
         Version: '2012-10-17'
@@ -79,7 +79,7 @@ Resources:
       CodeUri: weather-processor/
       Handler: app.weatherHandler
       Role: 
-        Fn:GetAtt:
+        Fn::GetAtt:
         - ParameterStoreWeatherFunctionRoleDev
         - Arn
       Runtime: nodejs8.10
@@ -134,7 +134,3 @@ Outputs:
     WeatherFunction:
       Description: "Weather Lambda Function ARN"
       Value: !GetAtt WeatherFunction.Arn
-
-    WeatherFunctionIamRole:
-      Description: "Implicit IAM Role created for Weather function"
-      Value: !GetAtt WeatherFunctionRole.Arn
